Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30988

Menu: warning at build time

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.1.0 Beta 1
    • 5.1.0 Beta 1
    • Quick: Controls 1
    • None
    • c97e91098df1a3a4874ea9acdc968690e6b59986

    Description

      When building the controls, qquickmenu_p.h creates a warning:

      "qquickmenu_p.h:72: Warning: Property declaration __font has no READ accessor function or associated MEMBER variable. The property will be invalid."

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            carochao Caroline Chao (Inactive)
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes