Fix warning in qquickmenu_p.h

'Warning: Property declaration __font has no READ accessor function or
associated MEMBER variable. The property will be invalid.'

Task-number: QTBUG-30988

Change-Id: I7530310d0da03ecd59bfe1cc3e221e776c17d4f7
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>