src/controls/qquickmenu_p.h
@@ -48,6 +48,7 @@
 #include <QtCore/qvariant.h>
 #include <QtQml/qqml.h>
 #include <QtQml/qqmllist.h>
+#include <QtGui/QFont>
 
 QT_BEGIN_NAMESPACE
 
@@ -69,7 +70,7 @@ class QQuickMenu : public QQuickMenuText
     Q_PROPERTY(bool __popupVisible READ popupVisible NOTIFY popupVisibleChanged)
     Q_PROPERTY(QQuickItem *__contentItem READ menuContentItem WRITE setMenuContentItem)
     Q_PROPERTY(int __minimumWidth READ minimumWidth WRITE setMinimumWidth)
-    Q_PROPERTY(QFont __font WRITE setFont)
+    Q_PROPERTY(QFont __font READ font WRITE setFont)
     Q_PROPERTY(qreal __xOffset READ xOffset WRITE setXOffset)
     Q_PROPERTY(qreal __yOffset READ yOffset WRITE setYOffset)
 
@@ -116,6 +117,7 @@ public:
     void setMinimumWidth(int w);
 
     void setFont(const QFont &font);
+    QFont font() const { return m_font; }
 
     qreal xOffset() const { return m_xOffset; }
     void setXOffset(qreal);
@@ -171,6 +173,7 @@ private:
     int m_containersCount;
     qreal m_xOffset;
     qreal m_yOffset;
+    QFont m_font;
 };
 
 QT_END_NAMESPACE
